--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "@types/node": "22.9.0",
     "@types/react": "18.3.12",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "ts-node": "10.9.2",
     "typescript": "5.6.3"
   }
