thingamaging fix the thing

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,9 @@
     "paths": {
       "@components/*": [
         "components/*"
-      ]
+      ],
+      "@styles/*": [
+        "styles/*"]
     },
     "allowJs": true,
     "skipLibCheck": true,
