--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.2.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
